# meteo_api

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yaml
.github/: release-config.json
.github/workflows/: app-workflow.yaml  release.yaml  tags.yaml
app/: .cache.sqlite  app.Dockerfile  migrations.Dockerfile  pyproject.toml  release.Dockerfile
app/alembic/: env.py
app/alembic/versions/: bc953d72654e_add_tables.py
app/app/: main.py
app/app/core/: logger.py
app/app/core/config/: conf.py  db_config.py  log_config.py
app/app/core/exceptions/: base.py
app/app/db/: database.py
app/app/db/dao/: base.py  site.py  weather.py
app/app/db/tables/: __init__.py  site.py  weather.py
app/app/models/: site.py  weather.py
app/app/models/dto/: empty.py  site.py  version.py  weather.py
app/app/routes/: healthz.py  meteo_route.py  site_route.py  version.py
app/app/services/: open_meteo.py  site.py
app/tests/: fake_test.py
