[tool.poetry]
name = "3bee"
# x-release-please-start-version
version = "0.1.0"
# x-release-please-end
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
pymysql = "^1.1.1"
cryptography = "^43.0.1"
pandas = "^2.2.2"
numpy = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pytest = "^8.3.2"


[tool.poetry.group.migrations.dependencies]
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"
pymysql = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [".venv", "alembic"]
required-version = ">=0.3.5"
# change the default line length number or characters.
line-length = 88

[tool.ruff.format]
exclude = [".venv", "alembic"]
quote-style = "single"
indent-style = "space"
docstring-code-format = true